--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {
+    "require": {},
+    "require-dev" : {
         "illuminate/database": "5.4.x-dev",
         "monolog/monolog": "1.x-dev"
     }
