--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "illuminate/database": "^5.4",
-        "monolog/monolog": "^1.23"
+        "slim/slim"                 : "^3.0",
+        "tuupola/slim-jwt-auth"     : "^2.3",
+        "respect/validation"        : "^1.1",
+        "robmorgan/phinx"           :"0.5.*",
+        "illuminate/database"       : "^5.4",
+        "monolog/monolog"           : "^1.23"
     }
 }
